Documented GUI's panels and fixed some bugs